; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/mandoc/extr_mdoc_markdown.c_md_pre_Dl.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/mandoc/extr_mdoc_markdown.c_md_pre_Dl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.roff_node = type { i32 }

@quote_blocks = common dso_local global i64 0, align 8
@code_blocks = common dso_local global i32 0, align 4
@MD_sp = common dso_local global i32 0, align 4
@outflags = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.roff_node*)* @md_pre_Dl to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @md_pre_Dl(%struct.roff_node* %0) #0 {
  %2 = alloca %struct.roff_node*, align 8
  store %struct.roff_node* %0, %struct.roff_node** %2, align 8
  %3 = load i64, i64* @quote_blocks, align 8
  %4 = icmp ne i64 %3, 0
  br i1 %4, label %5, label %9

5:                                                ; preds = %1
  %6 = call i32 @md_stack(i8 signext 62)
  %7 = load i64, i64* @quote_blocks, align 8
  %8 = add nsw i64 %7, 1
  store i64 %8, i64* @quote_blocks, align 8
  br label %13

9:                                                ; preds = %1
  %10 = call i32 @md_stack(i8 signext 9)
  %11 = load i32, i32* @code_blocks, align 4
  %12 = add nsw i32 %11, 1
  store i32 %12, i32* @code_blocks, align 4
  br label %13

13:                                               ; preds = %9, %5
  %14 = load i32, i32* @MD_sp, align 4
  %15 = load i32, i32* @outflags, align 4
  %16 = or i32 %15, %14
  store i32 %16, i32* @outflags, align 4
  ret i32 1
}

declare dso_local i32 @md_stack(i8 signext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
